<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profile_icon_description" />

    <TextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/euclid_circular_medium"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/profile_icon"
        app:layout_constraintTop_toTopOf="@+id/profile_icon"
        app:layout_constraintBottom_toBottomOf="@+id/profile_icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/euclid_circular_bold"
        android:textSize="24sp"
        android:text="@string/coming_soon_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/work_progress" />

    <ImageView
        android:id="@+id/work_progress"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/ic_work_progress"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/work_progress_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/euclid_circular_regular"
        android:textSize="20sp"
        android:text="@string/work_progress_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/work_progress" />




</androidx.constraintlayout.widget.ConstraintLayout>